pack: track live instance configuration and mod manifests
The repository now IS the pack. Its checkout is the main PC's Prism Launcher
instance, so .gitignore is whitelist-only: mod configuration, manifests, and
docs are tracked, and the several gigabytes of jars, worlds, logs, backups, and
Distant Horizons LOD data beside them are not.

No third-party artifact is committed. Jars, resource packs, shader packs, and
datapack zips are recorded in manifest/ by filename, size, and SHA-256 instead,
which verifies a pack without redistributing files we do not own.

scripts/generate-manifest.sh regenerates those inventories, check-mods.sh
reports drift between disk and manifest, and sync-instance.sh fast-forwards a
subscribed client -- skipping while Minecraft runs and refusing to overwrite
local edits.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>